# Asmblr

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  ADVANCED_TESTING_IMPLEMENTATION.md  APP_IMPROVEMENT_PLAN.md  CHANGELOG.md  CODE_STYLE_GUIDE.md  COLLECTION_ACTIONS_RULE_SUMMARY.md  COMMUNITY.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.cached  Dockerfile.lightweight  Dockerfile.optimized  Dockerfile.secure  Dockerfile.test  ENTERPRISE_FEATURES_IMPLEMENTATION.md  FEATURES_OVERVIEW.md  FINAL_100_PERCENT_REPORT.md  FINAL_ADVANCED_FEATURES_SUMMARY.md  FINAL_VALIDATION_REPORT.md  HIGH_PRIORITY_IMPLEMENTATIONS.md  IMPORT_OPTIMIZATION.md  IMPROVEMENTS.md  IMPROVEMENTS_SUMMARY.md  LICENSE  LOW_PRIORITY_IMPLEMENTATIONS.md  MAINTENANCE_NIGHTMARE_FIXED.md  MICROSERVICES_ARCHITECTURE.md  MICROSERVICES_DEPLOYMENT_GUIDE.md  Makefile  NEXT_STEPS.md  OPERATIONS.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_OPTIMIZATION_REPORT.md  PERFORMANCE_RESOURCES_FIXED.md  PHASE1_COMPLETE.md  PHASE2B_COMPLETE.md  (+117 more)
.github/: pull_request_template.md
.tmp/: antigravity_skill_names.txt
api-gateway/: Dockerfile  main.py  requirements-gateway.txt
app/: __init__.py  bench_edi.py  cli.py  langchain_tools.py  main.py  mvp_cycles.py  onboarding_templates.py  project_build.py  ralph_loop.py  seo_optimization.py  signal_engine.py  signal_insights.py  signal_quality.py  ui.py  ui_enhanced.py  ui_quality.py  worker_improved.py
asmblr-agents/: Dockerfile  main.py  requirements-agents.txt
asmblr-core/: Dockerfile  database.py  main.py  models.py  pipeline_service.py  requirements-core.txt
asmblr-media/: main.py
backups/: cache_20260208_012117.py  pipeline_20260208_012117.py  ui_20260208_012117.py  worker_20260208_012117.py
benchmark/: .gitignore  README.md  __init__.py  __main__.py  alignment_analysis.md  alignment_tests.md  alignment_tests.py  baselines.md  benchmark_definition.md  create_csv_artifacts.py  enhanced_data_collector.py  experimental_protocol.md  generate_examples.py  large_scale_validation.py  metrics.md  multi_agent_evaluation.md  requirements_validation.txt  run_large_scale_validation.py  scale_dataset.py  test_compatibility.py  test_compatibility_simple.py
compliance/: automation.py
config/: .env.example  asmblr_mobile_app_plan.json  asmblr_v4_complete_plan.json  asmblr_v5_cosmic_plan.json  asmblr_v5_implementation_results.json  asmblr_v7_source_code_results.json  code_quality_report.json  config_performance.toml  monitoring_report.json  next_steps_progress.json  next_steps_progress_report.json  paper_artifacts_manifest.json  todos.json  validation_results.json
configs/: env.simple.template  lightweight_cache.json  sources.yaml  thresholds.yaml
data/: app.db
deployment/: Dockerfile  Dockerfile.cached  Dockerfile.test  deploy.ps1  deploy.sh  docker-compose.cached.yml  docker-compose.grafana.yml  docker-compose.microservices.yml  docker-compose.monitoring.yml  docker-compose.production.yml  docker-compose.secure.yml  docker-compose.yml
docs/: ABSOLUTE_TECHNOLOGIES_SUMMARY.md  AUDIT_COMPLET_ASMblr.md  AUDIT_REPORT.md  CEO_ORCHESTRATOR_README.md  CLEANUP_SUMMARY.md  CODE_OF_CONDUCT.md  CODE_QUALITY_FIXED.md  CODE_QUALITY_GUIDE.md  CODE_SMELLS_GUIDE.md  CONTRIBUTING.md  COSMIC_TECHNOLOGIES_SUMMARY.md  CRITICAL_BUG_FIXES.md  DEVELOPER_GUIDE.md  DIVINE_TECHNOLOGIES_SUMMARY.md  DOCUMENTATION_INDEX.md  ENHANCED_FEATURES_IMPLEMENTATION.md  FACILITATOR_AGENTS.md  FEEDBACK_LOOPS.md  FINAL_COMPLETE_REPORT.md  FIXES_APPLIED.md  HIGH_PRIORITY_BUG_FIXES.md  IMMEDIATE_IMPROVEMENTS_SUMMARY.md  IMPROVEMENT_SUMMARY.md  LOW_PRIORITY_BUG_FIXES.md  MAINTAINABILITY_GUIDE.md  MEDIUM_PRIORITY_BUG_FIXES.md  MEDIUM_PRIORITY_IMPLEMENTATIONS.md  MONITORING_GUIDE.md  OPERATIONS.md  PEER_REVIEW.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  PHASE1_COMPLETE_REPORT.md  PHASE1_STABILIZATION_REPORT.md  PHASE3_COMPLETE_REPORT.md  PHASE3_POLISH_REPORT.md  PIPELINE_ARCHITECTURE.md  PITCH_DECK_MODELS.md  PLUGIN_SYSTEM_IMPLEMENTATION.md  PRODUCT_IMPROVEMENTS_SUMMARY.md  README.md  (+20 more)
ml_ops/: pipeline.py
monitoring/: advanced_tracing.py  production_monitoring.py
multi_cloud/: deployment.py
orchestrator/: Dockerfile  requirements-gateway.txt
paper_artifacts/: README.md
requirements/: requirements-fixed.txt  requirements.core.txt  requirements_updated.txt
results/: sensitivity_rankings.csv
scripts/: ab-testing.py  analyze_monitoring.py  analyze_technical_debt.py  asmblr.bat  asmblr.ps1  asmblr.sh  asmblr_cli.py  asmblr_lightweight_startup.py  auto-scaling.py  backup-service.py  blue-green-deploy.sh  build_paper_artifacts.py  calculate_debt_score.py  calculate_performance.py  calculate_quality.py  calculate_security.py  chaos-engineering.py  chaos_engineering.py  check_syntax.py  ci_e2e.py  count_core_lines.py  count_lines.py  create_demo_report.py  demo_collection_actions_rule.py  demo_monitoring.py  deploy_microservices_fixed.py  final_validation_suite.py  fix_code_quality.py  fix_maintenance_nightmare.py  fix_maintenance_simple.py  fix_performance_resources.py  fix_technical_debt_comprehensive.py  generate_compute_matched_artifacts.py  generate_performance_report.py  generate_ssl.sh  gitops-deploy.py  health-check.sh  load-test.py  maintenance_automation.py  maintenance_dashboard.py  (+40 more)
templates/: landing.css  landing.html.j2
tests/: conftest.py  enhanced_test_suite.py  run_master_tests.py  test_actionability_logging.py  test_agent_skills.py  test_async_tasks.py  test_atomic_write.py  test_backup_service.py  test_build_mvp.py  test_build_paper_artifacts.py  test_business_metrics.py  test_campaign_asset_plan.py  test_clustering.py  test_code_quality.py  test_collection_actions_rule.py  test_confidence.py  test_crewai_pipeline.py  test_critical_path_fixes.py  test_critique.py  test_data_sanitizer.py  test_datetime_validation.py  test_decision_quality.py  test_docker_optimized.py  test_execution_profiles.py  test_export_paper_artifacts.py  test_frontend_kit.py  test_functional_smoke.py  test_generate_compute_matched_artifacts.py  test_generators.py  test_historical_learning_error_handling.py  (+42 more)
(+760 files in other folders)
